Fix scrollbar being visible because of OCD

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -12,6 +12,7 @@ body {
   width: 100vw;
   margin: 0;
   position: absolute;
+  overflow: hidden visible;
 }
 
 a:hover {
